fix modal-header length text, fix file pdf preview on mobile, fix avatar directive

--- a/src/app/shared/components/modals/modal/modal-header/modal-header.component.sass
+++ b/src/app/shared/components/modals/modal/modal-header/modal-header.component.sass
@@ -82,7 +82,14 @@
 			color: $c-text-secondary
 			text-align: center
 			flex: 1
+			max-width: 100%
+			padding: 0 56px
 
 			p
 				+subtitle
 				color: $c-text-secondary
+				overflow: hidden
+				text-overflow: ellipsis
+				display: block
+				white-space: nowrap
+				max-width: 100%
